Fix line breaks in long URLs

--- a/src/assets/src/styles.scss
+++ b/src/assets/src/styles.scss
@@ -22,6 +22,10 @@ img {
   white-space: nowrap;
 }
 
+.break-anywhere {
+  overflow-wrap: anywhere;
+}
+
 .font-normal {
   font-weight: normal;
 }
